# async-binance

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: lib.rs
client/src/rest/: body.rs  client.rs  config.rs  extension.rs  mod.rs  rest_client.rs
client/src/rest/layer/: mod.rs
client/src/rest/layer/authorization/: layer.rs  mod.rs  sign.rs  types.rs
client/src/rest/layer/rate/: future.rs  layer.rs  mod.rs  types.rs
client/src/rest/layer/rate/types/: ip_handle.rs  mod.rs  order_handle.rs  uid_handle.rs  window.rs
client/src/stream/: actor.rs  adaptor.rs  client.rs  mod.rs  payload.rs  socket.rs  stream.rs
general/: Cargo.toml
general/src/: error.rs  lib.rs  result.rs  serialize_extend.rs  symbol.rs
general/src/enums/: contract_status.rs  contract_type.rs  general.rs  interval.rs  level.rs  mod.rs  order.rs  permission.rs  query_type.rs  rate_limiter.rs  speed.rs  symbol_filter.rs  symbol_status.rs  timezone.rs  window_size.rs
macros/: Cargo.toml
macros/src/: lib.rs
rest-api/: Cargo.toml
rest-api/src/: lib.rs  market_ct.rs  order_ct.rs  spot_market_ct.rs  spot_order_ct.rs  usd_future_market_ct.rs  wallet_ct.rs
rest-api/src/types/: mod.rs
rest-api/src/types/market/: asset.rs  exchange.rs  future_exchange.rs  kline.rs  mod.rs  order_book.rs  price.rs  symbol_info.rs  trade_list.rs
rest-api/src/types/order/: mod.rs
rest-api/src/types/order/general/: cancel.rs  create.rs  mod.rs  query.rs
rest-api/src/types/order/lists/: cancel.rs  mod.rs  oco_create.rs  oto_create.rs  otoco_create.rs  query.rs  query_all.rs  query_open.rs
rest-api/src/types/order/sor/: create.rs
rest-api/src/types/wallet/: coins.rs  deposit.rs  mod.rs  withdraw.rs
rest-api/tests/: spot_market_test.rs  usd_future_market_test.rs
websocket/: Cargo.toml
websocket/src/: lib.rs  market_socket_ct.rs  spot_market_socket_ct.rs  spot_user_data_stream_ct.rs  usd_future_market_socket_ct.rs  user_data_stream_ct.rs
websocket/src/market/: agg_trade_ct.rs  all_mark_price_ct.rs  all_ticker_ct.rs  avg_price_ct.rs  book_depth_ct.rs  book_ticker_ct.rs  book_ticker_total_ct.rs  composite_index_symbol_ct.rs  continuous_kline_ct.rs  contract_info_ct.rs  depth_ct.rs  kline_ct.rs  liquidation_order_ct.rs  liquidation_order_total_ct.rs  mark_price_ct.rs  mark_price_total_ct.rs  mini_ticker_ct.rs  mini_ticker_total_ct.rs  mod.rs  partial_depth_ct.rs  rolling_ct.rs  rolling_total_ct.rs  ticker_ct.rs  ticker_total_ct.rs  trade_ct.rs
websocket/src/market/coin_future/: agg_trade_ct.rs  mod.rs
websocket/src/market/spot/: agg_trade_ct.rs  avg_price_ct.rs  book_depth_ct.rs  book_ticker_ct.rs  depth_ct.rs  kline_ct.rs  mini_ticker_ct.rs  mod.rs  rolling_ct.rs  ticker_ct.rs  trade_ct.rs
websocket/src/market/types/: agg_trade.rs  average_price.rs  book_depth.rs  composite_index_symbol.rs  continuous_kline.rs  contract_info.rs  depth.rs  event_type.rs  kline.rs  liquidation_order.rs  mark_price.rs  mod.rs  symbol_book_ticker.rs  symbol_mini_ticker.rs  symbol_rolling.rs  symbol_ticker.rs  trade.rs
websocket/src/userdata/: mod.rs  user_data_rest.rs  user_data_socket.rs
websocket/src/userdata/types/: account.rs  balance.rs  event_type.rs  listen_key.rs  mod.rs  order.rs  order_list.rs
websocket/tests/: spot_test.rs  usd_future_test.rs
