[package]
name = "general"
version.workspace = true
authors.workspace = true
edition.workspace = true



[lib]
path = "src/lib.rs"


[dependencies]
serde.workspace = true
serde_json.workspace = true
macros = {path = "../macros"}
log.workspace = true
thiserror.workspace = true
hyper.workspace = true
ed25519-dalek = {workspace = true, features = ["pkcs8"]}
hyper-util = {workspace = true, features = ["client-legacy"]}
tokio-tungstenite.workspace = true
serde_urlencoded.workspace = true