[package]
name = "rest-api"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
bigdecimal.workspace = true
general = {path = "../general"}
client = {path = "../client" , features = ["default"]}
log.workspace = true
env_logger.workspace = true


[dev-dependencies]
tokio.workspace = true
lazy_static.workspace = true