[package]
name = "rest-api"
version.workspace = true
authors.workspace = true
edition.workspace = true


[lib]
path = "src/lib.rs"


[dependencies]
serde.workspace = true
bigdecimal.workspace = true
general = {path = "../general"}
client = {path = "../client" , features = ["default"]}
log.workspace = true
env_logger.workspace = true


[dev-dependencies]
tokio.workspace = true
lazy_static.workspace = true